Hotfix iteration 02.1 allow terminal receipt issue permission
